--- a/app/views/application/styleguide.html.erb
+++ b/app/views/application/styleguide.html.erb
@@ -9,7 +9,7 @@
 
 </head>
 
-<body>
+<body style="margin-top:0px;">
     <div class="wrapper pad-lrg">
         <span>h1..6 with SSS class (the styles to switch to)</span>
         <hr>
@@ -29,17 +29,24 @@
         <p class="span6">Span6 Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
 
         <hr>
-        <span>Generic button and anchor</span>
+        <span>Generic Button</span>
         <hr>
 
         <button class="">Button</button>
         <button class="red">Button red</button>
         <button class="brown">Button brown</button>
-        <button class="green">Button blue</button>
-        <button class="blue">Button green</button>
+        <button class="green">Button Green</button>
+        <button class="blue">Button Blue</button>
         <button class="darkslategray">Button darkslategray</button>
 
+        <hr>
+        <span>Generic Anchor and a.i-arrow (i-arrow is experimental)</span>
+        <hr>
+
         <a href="#">Anchor</a>
+        <br>
+        <a href="" class="i-arrow">Arrow Class</a>
+
 
         <hr>
         <span>Buttons/Anchors with class action-btn</span>
@@ -51,6 +58,7 @@
         <button class="action-btn green">Action Button</button>
         <button class="action-btn blue">Action Button</button>
         <button class="action-btn darkslategray">Action Button</button>
+        <button class="action-btn darkseagreen">Action Button</button>
 
 
         <br>
@@ -66,24 +74,25 @@
         <hr>
         <span>Buttons/Anchors with class push-btn</span>
         <hr>
-        <section class="my-container-half gen-inline-block mar-bot-children">
-            <button class="push-btn">Push Button</button>
-            <button class="push-btn red">Push Button</button>
-            <button class="push-btn green">Push Button</button>
-            <button class="push-btn blue">Push Button</button>
-            <button class="push-btn brown">Push Button</button>
-            <button class="push-btn darkslategray">Push Button</button>
-        </section>
-
-
-        <section class="my-container-half gen-inline-top mar-bot-children">
-        <a href="#" class="push-btn">Push Anchor</a>
-        <a href="#" class="push-btn red">Push Anchor</a>
-        <a href="#" class="push-btn green">Push Anchor</a>
-        <a href="#" class="push-btn blue">Push Anchor</a>
-        <a href="#" class="push-btn brown">Push Anchor</a>
-        <a href="#" class="push-btn darkslategray">Push Anchor</a>
-    </section>
+        <div class="row-new pad">
+            <section class="column six mar-bot-children">
+                <button class="push-btn">Push Button</button>
+                <button class="push-btn red">Push Button</button>
+                <button class="push-btn green">Push Button</button>
+                <button class="push-btn blue">Push Button</button>
+                <button class="push-btn brown">Push Button</button>
+                <button class="push-btn darkslategray">Push Button</button>
+            </section>
+            <section class="column six mar-bot-children">
+                <a href="#" class="push-btn">Push Anchor</a>
+                <a href="#" class="push-btn red">Push Anchor</a>
+                <a href="#" class="push-btn green">Push Anchor</a>
+                <a href="#" class="push-btn blue">Push Anchor</a>
+                <a href="#" class="push-btn brown">Push Anchor</a>
+                <a href="#" class="push-btn darkslategray">Push Anchor</a>
+            </section> 
+        </div>
+        
 
         <hr>
         <span>Generic text inputs</span>
