--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
 
 <body >
 
-	<div class="wrapper" id="top">
+	<div class="wrapper wrap-website" id="top">
 		<div id="topbar" class="row-new topbar clear-fix">
 			<div class="my-container">
 
