--- a/app/assets/stylesheets/base/_css_reset.scss
+++ b/app/assets/stylesheets/base/_css_reset.scss
@@ -30,14 +30,18 @@ p {
 }
 
 body {
-  /* because the topbar always takes space fixed
+
+  // background-image: image-url('noise-bg-2.png');
+  // background-repeat: repeat;
+  //background-color:dimgray;
+} 
+
+.wrap-website {
+    /* because the topbar always takes space fixed
   on top, removed from the regular flow */
   margin-top: 70px;
   @media (max-width: 520px) {
     margin-top: 100px;
   }
-  // background-image: image-url('noise-bg-2.png');
-  // background-repeat: repeat;
-  //background-color:dimgray;
-} 
+}
 
