--- a/app/assets/stylesheets/modules/buttons.css.scss
+++ b/app/assets/stylesheets/modules/buttons.css.scss
@@ -51,3 +51,17 @@
   width: 100%;
   margin-bottom: 5px;
 }
+
+/* a.arrow {
+  color: darkseagreen;
+  &:before{
+    padding-right: 25px;
+    width: 0; 
+    height: 0; S
+    content: ' ';
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+    border-left: 20px solid darkseagreen;
+  }
+}
+ */
