--- a/app/assets/stylesheets/modules/navs.css.scss
+++ b/app/assets/stylesheets/modules/navs.css.scss
@@ -1,14 +1,12 @@
-.management {
-  border-bottom: solid 2px #999;
+nav.management {
   margin-bottom: 45px;
   text-align: center;
 
-  .column {
-    padding: 15px;
+  a {
     font-size: 24px;
 
     &:hover {
-      background-color: khaki;
+      //background-color: khaki;
       color: #999;
     }
   }
