new headers for menu

--- a/app/assets/stylesheets/modules/navs.css.scss
+++ b/app/assets/stylesheets/modules/navs.css.scss
@@ -1,6 +1,9 @@
+@import "base/vars";
+
 nav.management {
   margin-bottom: 45px;
   text-align: center;
+  width: $menu-width;
 
   a {
     font-size: 24px;
@@ -10,4 +13,14 @@ nav.management {
       color: #999;
     }
   }
+}
+
+
+.stick {
+    position: fixed;
+    top: 0;
+}
+
+.my-panel-heading {
+  
 }
