--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -83,7 +83,7 @@
 		</div>
 			
 
-		<div id="order-form" class="the-menu">
+		<div id="order-form">
 			<%= yield %>
 		</div>
 				
@@ -102,11 +102,9 @@
 	<% end %>
 
 	<section class="wrapper" style=" background-color: darkseagreen; padding: 10px; color:white;">
-		<div class="row-new" >
-			<div class="column-mobile twelve" style="text-align:center;">
+			<div class="column twelve" style="text-align:center;">
 				<h3>How It Works</h3>
 			</div>
-		</div>
 	</section>
 
 
