--- a/app/assets/stylesheets/styles-general.css.scss
+++ b/app/assets/stylesheets/styles-general.css.scss
@@ -1,37 +1,6 @@
 @import "mixins", "base/vars";
 
-footer.popup-banner {
-  width:100%;
-  height:3em;
-  padding:1em;
-  background-color:#202020  ;
-  color:white;
-  text-align:center;
-  position:fixed;
-  bottom: 0;
-  left: 0;
 
-  & > .container {
-    max-width:900px;
-  }
-
-  a.place-order {
-    color:white;
-  }
-  a.learn-more {
-    position:fixed;
-    right:10px;
-    color:white;
-  }
-
-  @media(max-width:520px) {
-      a.learn-more {
-        display:none;
-      }
-  }
-}
-
-  
 
 .sign-up-page-deal {
   h4 {
@@ -74,76 +43,30 @@ span.tax {
   font-size: 75%;
 }
 
-.i-location {
-  font-family: 'FontAwesome';
-  font-size: 102px;
-  &:before {
-    //content: '\f10b';
-    content: '\f10a';
-  }
-}
-
-.i-pay {
-  font-family: 'FontAwesome';
-  font-size: 102px;
-  &:before {
-    content: '\f09d';
-  }
-}
-.i-pickup {
-  font-family: 'FontAwesome';
-  font-size: 102px;
-  &:before {
-    content: '\f087';
-  }
-}
-
-.i-easy-123 {
-  font-size: 102px;
-}
 
 #order-form {
   margin: 0px auto;
   min-width: 320px;
   max-width: 660px;
-  //padding-top:60px;
-  //padding-bottom:60px;
-
 }
 
-
-
-.the-menu {
-  //padding-top: 60px;
-  //padding-bottom: 60px;
-  padding-bottom:70px;
-}
-
-.panel-title {
-  font-weight: 800;
-  color: $white;
+.expandable {
   cursor: pointer;
-  //background-color: #A10;
-
-  &:before {
-    margin-right: 5px;
-    font-family: 'FontAwesome';
-    font-weight: normal;
-    content: '\f0da';
-  }
-
-  &.expanded:before {
-    font-family: 'FontAwesome';
-    font-weight: normal;
-    content: '\f0d7';
-  }
 }
 
-.panel-default > .panel-heading {
-  background-color: $red;
-  cursor: pointer;
-  border-radius: 0px;
+.expandable:before {
+  margin-right: 10px;
+  font-family: 'FontAwesome';
+  font-weight: normal;
+  content: '\f0da';
 }
+
+.expandable.expanded:before {
+  font-family: 'FontAwesome';
+  font-weight: normal;
+  content: '\f0d7';
+}
+
 
 table.table {
   border-radius: 0px;
