--- a/app/views/restaurants/_top_nav.html.erb
+++ b/app/views/restaurants/_top_nav.html.erb
@@ -4,8 +4,9 @@ Manage Restaurant
 
 <h2 class="SSS"> <%= @restaurant.name %> </h2>
 
-<nav class="row-new management">
-  <div class="column four"><%= link_to "My Restaurant", restaurant_path(@restaurant), {:method => 'get', class: 'action-btn twelve'} %></div>
-  <div class="column four"><%= link_to "Recent Orders", recent_orders_restaurant_path(@restaurant), {:method => 'get', class: 'action-btn twelve' } %></div>
-  <div class="column four"><%= link_to "My Menu", my_menu_restaurant_path(@restaurant), {:method => 'get', class: 'action-btn twelve'} %></div>
+<a href="#" id="mainMenuBarAnchor"></a>
+<nav id="mainMenuBar" class="row-new management">
+  <%= link_to "My Restaurant", restaurant_path(@restaurant), {:method => 'get', class: 'action-btn column four'} %>
+  <%= link_to "Recent Orders", recent_orders_restaurant_path(@restaurant), {:method => 'get', class: 'action-btn column four' } %>
+  <%= link_to "My Menu", my_menu_restaurant_path(@restaurant), {:method => 'get', class: 'action-btn column four'} %>
 </nav>
