--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -101,15 +101,9 @@
 		</section>
 	<% end %>
 
-	<section class="wrapper" style=" background-color: darkseagreen; padding: 10px; color:white;">
-			<div class="column twelve" style="text-align:center;">
-				<h3>How It Works</h3>
-			</div>
-	</section>
-
-
 
 	<section class="wrapper-darkseagreen" style="padding-bottom:65px;">
+		<h3 class="pad text-center text-white">How It Works</h3>
 	
 		<div class="row-new pad-y easy-123">
 			<div class="column-mobile four">
