--- a/app/views/orders/_display_mods.html.erb
+++ b/app/views/orders/_display_mods.html.erb
@@ -1,4 +1,4 @@
-<div id="<%=item.id%>_mod" class="wrapper entire-mod-wrap">
+<div id="<%=item.id%>_mod" class="entire-mod-wrap">
   <h2 class="customize-this"> <%= item.name %> </h2>
 
   <div class="row-new">
