--- a/app/assets/stylesheets/components/the-menu.css.scss
+++ b/app/assets/stylesheets/components/the-menu.css.scss
@@ -1,3 +1,12 @@
 .the-menu {
   h3 { margin-bottom: 0px; }
 }
+
+.all-items-wrap {
+
+  .single-item-wrap {
+    padding: 5px;
+    font-size: 20px;
+    font-weight: 500;
+  }
+}
