--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -24,32 +24,36 @@
 
         <div class="all-items-wrap">
           <% category.items.each do |item| %>
-            <div class="row-new single-item-wrap">
-              <div class="column three"> <%= item.name %> </div>
-              <div id="<%=item.id%>_price" data-price="<%=item.price%>" class="column two"> <%= Item.integer_to_currency item.price %> </div>
+            <div data-id="<%= item.id %>" class="single-item-wrap">
+              <div class="row-new">
+                <div class="column five"> <%= item.name %> </div>
+                <div id="<%=item.id%>_price" data-price="<%=item.price%>" class="column three"> <%= Item.integer_to_currency item.price %> </div>
 
-              <% if(item.sold_out) %>
-                <div class="column three">Item Sold Out</td>
+                <% if(item.sold_out) %>
+                  <div class="column four">Item Sold Out</td>
 
-              <% else %> 
-                <div class="column one"> <span class="glyphicon glyphicon-minus minus"></span> </div>
-                <div id="<%=item.id%>_num" class="column one num"> 0 </div>
-                <div class="column one"> <span class="glyphicon glyphicon-plus plus"></span> </div>
-                            
-                <%= f.hidden_field "item[#{item.id}]", :value => 0, :class => "item_#{item.id}" %>
-              <% end %>
+                <% else %> 
+                  <div class="column one text-center"> <span class="fa fa-minus minus"></span> </div>
+                  <div id="<%=item.id%>_num" class="column two num text-center"> 0 </div>
+                  <div class="column one text-center"> <span class="fa fa-plus plus"></span> </div>
+                        
+
+                  <div class="item_id hidden"> <%= item.id %> </div>      
+                  <%= f.hidden_field "item[#{item.id}]", :value => 0, :class => "item_#{item.id}" %>
+                <% end %>
+              </div>
+
 
               <% if item.has_description? %>
-                <div class="column-mobile four ittem-description"> <%= item.description %> </div>
-              <% else %>
-                <div class="column-mobile four"></div>
+                <div class="twelve item-description"> <%= item.description %> </div>
               <% end %>
-                            
-            </div>
+                              
 
-            <% if item.has_mod?; @item = item %>
-              <%= render :partial => 'display_mods', :locals => { item: @item } %>
-            <% end %>
+              <% if item.has_mod?; @item = item %>
+                <%= render :partial => 'display_mods', :locals => { item: @item } %>
+              <% end %>
+
+            </div>
 
           <% end %>
         </div> <!-- ENDS ALL ITEMS WRAP -->
@@ -60,7 +64,7 @@
           <table cellspacing="10" class="table">
 
           <% @menu.items.each do |item| %>
-            <tbody class="menu_item" data-id= "<%= item.id %>" style="border:none;outline:none;">
+            <tbody class="menu_item" data-id="<%= item.id %>" data-price="<%= item.price %>" style="border:none;outline:none;">
               <tr>
                 <td><%= item.name %></td>
                 <td id="<%=item.id%>_price" data-price="<%=item.price%>"><%= Item.integer_to_currency item.price %></td>
