primary-app-wrap bandaid

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,12 +82,12 @@
 			<% end %>
 		</div>
 			
-
-		<div id="order-form">
+		<div id="order-form" class="primary-app-content">
 			<%= yield %>
 		</div>
 				
 	</div>
+
 	<% unless user_signed_in? %>
 		<section class="wrapper-khaki text-center pad">
 			<div class="my-container-half">
@@ -103,7 +103,7 @@
 
 
 	<section class="wrapper-darkseagreen" style="padding-bottom:65px;">
-		<h3 class="pad text-center text-white">How It Works</h3>
+		<h3 class="pad-sml text-center text-white">How It Works</h3>
 	
 		<div class="row-new pad-y easy-123">
 			<div class="column-mobile four">
