errors and items in cart count

--- a/app/assets/stylesheets/base/_text_presentation.scss
+++ b/app/assets/stylesheets/base/_text_presentation.scss
@@ -21,7 +21,9 @@ h3.SSS {
   padding: 8px 12px 8px 20px;
   font-weight: 500;
   border-top-right-radius: 16px;
+  border-bottom-right-radius: 16px;
   border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
   font-family: "Dosis", Tahoma, sans-serif;
 }
 
