--- a/app/assets/stylesheets/modules/my_wells.css.scss
+++ b/app/assets/stylesheets/modules/my_wells.css.scss
@@ -11,6 +11,16 @@
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 }
 
+.my-well-sml {
+  @extend .my-well;
+  padding: 6px;
+}
+
+.my-well-mid {
+  @extend .my-well;
+  padding: 12px;
+}
+
 .my-well-lemon {
   min-height: 18px;
   padding: 18px;
