--- a/app/assets/stylesheets/styles-general.css.scss
+++ b/app/assets/stylesheets/styles-general.css.scss
@@ -49,7 +49,8 @@ span.tax {
 }
 
 .primary-app-content {
-  margin: 0px auto;
+  margin-left: auto;
+  margin-right: auto;
   min-width: 320px;
   max-width: 660px;
 }
