error based on number of items in cart

--- a/app/assets/stylesheets/components/the-menu.css.scss
+++ b/app/assets/stylesheets/components/the-menu.css.scss
@@ -8,6 +8,9 @@
     font-size: 14px;
     padding: 5px;
 
+    span.plus { cursor: pointer; }
+    span.minus { cursor: pointer; }
+
     &:nth-child(even) {
       background-color: #F5F5F5;
     }
