--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,8 +1,5 @@
 <% content_for :page_title do%>
-#<%= @order.order_number%> 
+  #<%= @order.order_number%> - Currently <%= @order.current_order_state.state_text %>
 <% end %>
 
-
 <%= render 'shared/order_details' %>	
-
-<h2 class="text-center"> Currently <%= @order.current_order_state.state_text %> </h5>
