--- a/app/views/application/styleguide.html.erb
+++ b/app/views/application/styleguide.html.erb
@@ -59,6 +59,8 @@
         <button class="action-btn blue">Action Button</button>
         <button class="action-btn darkslategray">Action Button</button>
         <button class="action-btn darkseagreen">Action Button</button>
+        <button class="action-btn lightgreen">Action Button</button>
+        <button class="action-btn darkgreen">Action Button</button>
 
 
         <br>
