--- a/app/views/charges/_create_account_login.html.erb
+++ b/app/views/charges/_create_account_login.html.erb
@@ -1,8 +1,8 @@
 <!-- Rendered if the user is not logged in.-->
 
 <div class="row-new choose-account-option mar-bottom-sml">
-   <button class="column six action-btn blue alpha" id="create-account">Create Account</button>
-   <button class="column six action-btn beta" id="log-in">Log In</button>
+   <button class="column six blue alpha" id="create-account">Create Account</button>
+   <button class="column six beta" id="log-in">Log In</button>
 </div>
 
 <div class="row-new input-list" id="create-account-div">
