--- a/app/views/restaurants/my_menu.html.erb
+++ b/app/views/restaurants/my_menu.html.erb
@@ -83,16 +83,16 @@
   <tr>
     <td> <%= f.label :modifiers %></td>
     <td class="add-mod-btns">
-      <button class="action-btn" type="button" id="size_mod_btn" data-mod-type="size">Add a size option to item</button>
+      <button type="button" id="size_mod_btn" data-mod-type="size">Add a size option to item</button>
       <%= render 'new_item_size' %>
 
-      <button class="action-btn" type="button" id="single_select_mod_btn" data-mod-type="single">Add a single select option to item</button>
+      <button type="button" id="single_select_mod_btn" data-mod-type="single">Add a single select option to item</button>
       <%= render 'new_item_single_select' %>
 
-      <button class="action-btn" type="button" id="multiple_select_mod_btn" data-mod-type="multiple">Add a multi select option to item</button>
+      <button type="button" id="multiple_select_mod_btn" data-mod-type="multiple">Add a multi select option to item</button>
       <%= render 'new_item_multiple_select' %>
 
-      <button class="action-btn" type="button" id="mod_btn" data-mod-type="custom" disabled="disabled">Add a custom option to item</button>
+      <button type="button" id="mod_btn" data-mod-type="custom" disabled="disabled">Add a custom option to item</button>
 
       </td>
     </tr>
