--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -34,7 +34,7 @@ Account Settings
 
   <h2 class="SSS pad-top-lrg">Cancel My Account</h2>
 
-  <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, class: "action-btn red mar-bottom", :method => :delete %></p>
+  <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, class: "red mar-bottom", :method => :delete %></p>
 
   <%= link_to "Back", :back %>
 
