--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -7,13 +7,13 @@
 		<strong> Amount Available: </strong> <%= Order.integer_to_currency @amount %>
 		<br />
 		<% if @amount == 0 %>
-			<%= button_to "Nothing to Withdraw", '/#', { :class => "action-btn disabled mar-y", disabled: "disabled" } %>
+			<%= button_to "Nothing to Withdraw", '/#', { :class => "disabled mar-y", disabled: "disabled" } %>
 		<% else %>
-			<%= button_to "Withdraw", withdraw_funds_restaurant_path(@restaurant), { :class => "action-btn blue mar-y", :method => 'post' } %>
+			<%= button_to "Withdraw", withdraw_funds_restaurant_path(@restaurant), { :class => "blue mar-y", :method => 'post' } %>
 		<% end %>
 
 		<% if @account.nil? %>
-			<%= button_to "Add Bank Account", bank_account_restaurant_path(@restaurant), { :class => "action-btn mar-y", :method => 'get' } %>
+			<%= button_to "Add Bank Account", bank_account_restaurant_path(@restaurant), { :class => "mar-y", :method => 'get' } %>
 		<% else %>
 			<strong>Bank Account:</strong>  <%= @account.bank_name %> <%= @account.last4 %>	
 				<%= button_to "Change Bank Account", bank_account_restaurant_path(@restaurant), { :class => "action-btn mar-y", :method => 'get' } %>
@@ -40,7 +40,7 @@
 			<label>Add Manager By Email</label>
 			<ol>
 				<%= text_field_tag :email, nil, class: '' %>
-				<%= submit_tag 'Send Invite', :class => "action-btn green" %>
+				<%= submit_tag 'Send Invite', :class => "green" %>
 			</ol>
 		<% end %>
 	</section>
