--- a/app/assets/stylesheets/base/_inputs.scss
+++ b/app/assets/stylesheets/base/_inputs.scss
@@ -97,44 +97,44 @@ label {
 
 /* old code */
 
-input[type="radio"].modifier, input[type="checkbox"].modifier {
-  opacity: 0;
-  position:absolute;
-}
+// input[type="radio"].modifier, input[type="checkbox"].modifier {
+//   opacity: 0;
+//   position:absolute;
+// }
 
-input[type="radio"].modifier + label {
-  background-color: khaki;
-  background-image: none;
-  border-radius:15px;
-  border: 2px solid #555;
-  display:block;
-  height: 10px;
-  padding:6px;
-  width:10px;
-  box-shadow: 0 0 2px #333;
+// input[type="radio"].modifier + label {
+//   background-color: khaki;
+//   background-image: none;
+//   border-radius:15px;
+//   border: 2px solid #555;
+//   display:block;
+//   height: 10px;
+//   padding:6px;
+//   width:10px;
+//   box-shadow: 0 0 2px #333;
 
-}
+// }
 
-input[type="checkbox"].modifier + label {
-  background-color: khaki;
-  background-image: none;
-  border: 2px solid #555;
-  display:block;
-  height: 10px;
-  padding:6px;
-  width:10px;
-  box-shadow: 0 0 2px #333;
-}
+// input[type="checkbox"].modifier + label {
+//   background-color: khaki;
+//   background-image: none;
+//   border: 2px solid #555;
+//   display:block;
+//   height: 10px;
+//   padding:6px;
+//   width:10px;
+//   box-shadow: 0 0 2px #333;
+// }
 
-input[type=radio]:checked.modifier + label { 
-  background-color:#444;
-  border-color: khaki;
-}
+// input[type=radio]:checked.modifier + label { 
+//   background-color:#444;
+//   border-color: khaki;
+// }
 
-input[type="checkbox"]:checked.modifier + label { 
-  background-color:#444;
-  border-color: khaki;
-}
+// input[type="checkbox"]:checked.modifier + label { 
+//   background-color:#444;
+//   border-color: khaki;
+// }
 
 
 input[type="tel"].error { border: 1px solid #780000  }
