--- a/app/assets/stylesheets/components/_modifiers.scss
+++ b/app/assets/stylesheets/components/_modifiers.scss
@@ -7,12 +7,30 @@
 
 
   .customize-this { 
-    font-size: 1.4em;
+    font-size: 1.2em;
     text-align: center;
     margin-bottom: 9px;
 
     &:before {
       content: 'Customize this ';
+    }
+  }
+
+  .mod-header {
+    margin: 10px 0px 9px 0px;
+    border-bottom: solid 2px #888;
+    position: relative;
+
+    span {
+      font-family: "Damion", serif;
+      position: absolute;
+      top: -12px;
+      left: 10px;
+      display: block;
+      background: lemonchiffon;
+      padding: 0 9px 0 7px;
+      font-size: 18px;
+      color: #555;
     }
   }
 
@@ -23,9 +41,9 @@
   }
 
   ol.single-option-wrap {
-    color: orange;
+    color: #777;
     padding: 4px;
-    border-bottom: 1px solid brown;
+    //border-bottom: 1px solid brown;
 
     li:last-of-type {
       float: right;
