--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -57,9 +57,9 @@
 
           <% end %>
         </div> <!-- ENDS ALL ITEMS WRAP -->
-      </div>
-    <% end %>
+      <% end %>
     <% else %>
+    
       <div class="all-items-wrap">
         <% category.items.each do |item| %>
           <div data-id="<%= item.id %>" class="single-item-wrap">
@@ -100,7 +100,7 @@
   </div> <!-- ENDS THE-MENU -->
 
 
-  <div class="my-well-mid primary-app-content">
+  <div class="my-well-mid mar-top primary-app-content">
     <div class="row-new">
       <div class="money-wrap column-mobile six">
         <ol>
