--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -2,15 +2,12 @@
   <%= @owner.name %>
 <% end %>
 
-<div class="primary-app-content">
   <%= render 'form' %>
 
-  <div class="cancel mar-y-lrg primary-app-content">
-  	<% if @owner.instance_of?(Vendor) %>
-  		<%= link_to 'Cancel', :controller => 'application' , :action => "select_vendor", :object_id  => @owner.stadium.id %>
-  	<% else %>
-  		<%= link_to 'Cancel', :controller => 'application', :action => "select_stadium" %>
-  	<% end %>
-  </div>
-
+<div class="cancel mar-y-lrg">
+	<% if @owner.instance_of?(Vendor) %>
+		<%= link_to 'Cancel', :controller => 'application' , :action => "select_vendor", :object_id  => @owner.stadium.id %>
+	<% else %>
+		<%= link_to 'Cancel', :controller => 'application', :action => "select_stadium" %>
+	<% end %>
 </div>
