paddings and margins

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,7 +82,7 @@
 			<% end %>
 		</div>
 			
-		<div id="order-form" class="primary-app-content">
+		<div id="order-form" class="primary-app-content mar-bottom">
 			<%= yield %>
 		</div>
 				
