made pics smaller, removed bank stuff from show page

--- a/app/views/application/join.html.erb
+++ b/app/views/application/join.html.erb
@@ -59,9 +59,9 @@
 
     <section class="wrapper" id="images">
       <div class="container">
-        <%= image_tag "real_images/OrdersCloseUp.jpg"%>
-        <%= image_tag "real_images/MenuDropDown.jpg" %>
-        <%= image_tag "real_images/CajeShnack.jpg" %>
+        <%= image_tag "real_images/OrdersCloseUp_small.jpeg"%>
+        <%= image_tag "real_images/MenuDropDown_small.jpeg" %>
+        <%= image_tag "real_images/CajeShnack_small.jpeg" %>
       </div>
     </section>
 
