--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -33,7 +33,7 @@
         "base/colors";
 
 @import "charges", "orders", "sign_in", "styles-general";
-@import "custom-resizing";
+@import "animate", "custom-resizing";
 
 
 .step-style {
