--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
 
 
 				<div class="prgs-bar column-mobile eight">
-					<div class="title_current_step">
+					<div class="title_current_step animated flipInY">
 						<%= yield :page_title %>
 					</div>
 				</div>
