--- a/app/views/charges/_create_account_login.html.erb
+++ b/app/views/charges/_create_account_login.html.erb
@@ -18,6 +18,7 @@
 	</div>
 	<%= render 'credit_card_form', :locals => { :form_id => "create-account-form", :button_text => "Create Account & Pay For Order", :button_id => "pay-button" } %>
 
+	  <span class="right pad-top-sml"><%= image_tag "solid.png" %></span>
 </div>
 
 
