--- a/app/views/charges/_logged_in_payment.html.erb
+++ b/app/views/charges/_logged_in_payment.html.erb
@@ -33,5 +33,7 @@
   <div>
     <%= render 'credit_card_form', :locals => { :form_id => "select-card-form", :button_text => "Pay & Place Order", :button_id => "pay-logged-in-button" }%>
   </div>
+  <%= image_tag "solid.png", :class => "right pad-top-sml" %>
+
 
 </div>
