--- a/app/views/shared/_order_details.html.erb
+++ b/app/views/shared/_order_details.html.erb
@@ -7,17 +7,17 @@
 		</thead>
 		<% @order_items.each do |order_item| %>
 		<tr>
-			<td><%= @items[order_item.item_id].name %></td> 
+			<td>
+				<span class="name"><%= @items[order_item.item_id].name %></span>
+				<span class="description"><%= render :partial => 'shared/display_order_mods', :locals => { order_item: order_item } %></span>
+			</td> 
 				<td><%= order_item.quantity %> </td>
 
 				<td> <%= Item.integer_to_currency order_item.price %></td>
 				<%# update this below price to include the price of the item modifiers %>
 				<td> <%= Item.integer_to_currency( order_item.price * order_item.quantity) %></td>
 			</tr>
-			<% if order_item.has_mods?; @order_item = order_item %>
-				<%= render :partial => 'shared/display_order_mods', :locals => { order_item: @order_item } %>
-
-			<% end %>
+			
 		<% end %>
 
 		
