--- a/app/assets/stylesheets/components/_modifiers.scss
+++ b/app/assets/stylesheets/components/_modifiers.scss
@@ -52,7 +52,7 @@
 
     @media(max-width:520px) {
       li:last-of-type {
-        padding-left:15px;
+        padding-right:30px;
       }
     }
   }
