--- a/app/assets/stylesheets/base/_text_presentation.scss
+++ b/app/assets/stylesheets/base/_text_presentation.scss
@@ -17,13 +17,10 @@ h3.SSS {
   font-size: 1.4em;
   background-color: #b22;
   border-bottom: solid 2px darken(darkseagreen, 50%);
+  box-shadow:0 1px 1px rgba(0,0,0,0.05);
   color: $white;
   padding: 8px 12px 8px 20px;
   font-weight: 500;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
   font-family: "Dosis", Tahoma, sans-serif;
 }
 
